refactor: walk, walkDirRecur list, full scan and partial scan