@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 @Service
@@ -20,11 +19,10 @@ public class FSIndexer implements Indexer {
 
     @Override
     public List<Path> walk(String path) {
-        Path scan_path = Paths.get(path);
-        logger.info("Indexing: {}", path);
+        Path scanPath = Path.of(path);
+        logger.info("Walking: {}", path);
 
-
-        try (var file_stream = Files.walk(scan_path)) {
+        try (var file_stream = Files.walk(scanPath)) {
             return file_stream
                     .filter(Files::isRegularFile)
                     .filter(Files::isReadable)
@@ -33,8 +31,41 @@ public class FSIndexer implements Indexer {
         } catch (IOException e) {
             logger.error(e.getMessage());
         }
-        logger.info("done");
 
-        return List.of( );
+        return List.of();
     }
+
+    @Override
+    public List<Path> walkDirRecursively(String path) {
+        Path scanPath = Path.of(path);
+        logger.info("Walking Dirs Recursively: {}", path);
+
+        try (var file_stream = Files.walk(scanPath)) {
+            return file_stream
+                    .filter(Files::isDirectory)
+                    .filter(Files::isReadable)
+                    .toList();
+        } catch (IOException e) {
+            logger.error(e.getMessage());
+        }
+
+        return List.of();
+    }
+
+    @Override
+    public List<Path> list(String path) {
+        logger.info("Listing Directories: {}", path);
+
+        var scanPath = Path.of(path);
+        try (var fileStream = Files.list(scanPath)) {
+            return fileStream
+                    .filter(Files::isRegularFile)
+                    .filter(ImageTools::isImage)
+                    .toList();
+        } catch (IOException e) {
+            logger.error(e.getMessage());
+        }
+        return List.of();
+    }
+
 }
